force-app/main/default/objects/Box_Office_Result__c/Box_Office_Result__c.object-meta.xml
<CustomObject>
    <label>Box Office Result</label>
    <nameField>
        <displayFormat>BO-{0}</displayFormat>
        <label>Box Office Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Box Office Results</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>