force-app/main/default/objects/Box_Office_Result__c/fields/Movie__c.field-meta.xml
<CustomField>
    <fullName>Movie__c</fullName>
    <label>Movie</label>
    <referenceTo>Movie__c</referenceTo>
    <relationshipLabel>Box Office Results</relationshipLabel>
    <relationshipName>Box_Office_Results</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>