force-app/main/default/objects/Box_Office_Result__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <label>Results</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>