force-app/main/default/objects/Box_Office_Result__c/fields/Theater__c.field-meta.xml
<CustomField>
    <fullName>Theater__c</fullName>
    <label>Theater</label>
    <referenceTo>Theater__c</referenceTo>
    <relationshipLabel>Box Office Results</relationshipLabel>
    <relationshipName>Box_Office_Results</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>