force-app/main/default/objects/Box_Office_Result__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Movie__c</columns>
    <columns>Theater__c</columns>
    <columns>Results__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>